--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "amqp-ts": "^1.8.0",
+    "chart.js": "^4.2.1",
+    "jquery": "^3.7.0",
+    "net": "^1.0.2",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
